src/objects/Special_Event_Unit__c.object
<CustomObject>
    <description>Object to manage Units of an event, e.g. sessions or components</description>
    <fields>
        <fullName>BSC_Event_Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to trainer related to the event, shows who will be training/auditing on that day</description>
        <inlineHelpText>Select the trainer (only trainers attached to this event can be selected)</inlineHelpText>
        <label>BSC Event Trainer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Special_Event_Trainer__c.BSC_Event__c</field>
                <operation>equals</operation>
                <valueField>$Source.Special_Event__c</valueField>
            </filterItems>
            <infoMessage>You can only select Unit trainers that have been attached to the Event.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Special_Event_Trainer__c</referenceTo>
        <relationshipLabel>BSC Event Units</relationshipLabel>
        <relationshipName>BSC_Event_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Differs_from_Event_Venue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick only if the venue should be different from the main Event Venue.</description>
        <inlineHelpText>Tick only if the venue should be different from the main Event Venue.</inlineHelpText>
        <label>Differs from Event Venue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_Hours__c</fullName>
        <description>Calculates the number of hours the unit is taking place depending on the start and end date/time of the unit</description>
        <formula>(Unit_End_Time__c - Unit_Start_Time__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the number of hours the unit is taking place depending on the start and end date/time of the unit</inlineHelpText>
        <label>Duration (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>shows the duration of the event unit depending on the times of the unit and is calculated by a workflow</description>
        <inlineHelpText>Duration in Days (0.5 or 1), calculated by workflow</inlineHelpText>
        <label>Duration</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the BSC Event Unit Mandatory on the Event i.e. Is it Mandatory for a Delegate to attend this BSC Event Unit if they are attending this BSC Event</description>
        <inlineHelpText>Is the BSC Event Unit Mandatory on the Event i.e. Is it Mandatory for a Delegate to attend this BSC Event Unit if they are attending this BSC Event</inlineHelpText>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the BSC Event Unit Data was migrated from the Course Booker database</description>
        <inlineHelpText>Indicates whether the BSC Event Unit Data was migrated from the Course Booker database</inlineHelpText>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Venue_Costs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if custom venue costs apply</description>
        <inlineHelpText>Check if custom venue costs apply</inlineHelpText>
        <label>Override Venue Costs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PK_CB_ACT_ID__c</fullName>
        <description>The Unique Key for the BSC Event Unit from the Course Booker Database</description>
        <externalId>true</externalId>
        <inlineHelpText>The Unique Key for the BSC Event Unit from the Course Booker Database</inlineHelpText>
        <label>PK_CB_ACT_ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this is the Primary BSC Event Unit related to an Event, this is used to allow us to report on the trainer related to the event without pulling multiple lines</description>
        <inlineHelpText>Indicates whether this is the Primary BSC Event Unit related to an Event</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Event__c</fullName>
        <description>Related event</description>
        <inlineHelpText>Related event</inlineHelpText>
        <label>BSC Event</label>
        <referenceTo>Special_Event__c</referenceTo>
        <relationshipLabel>BSC Event Units</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Travel_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick if the event unit is a travel day and shouldn&apos;t be included as part of the code to update the event start/end date</description>
        <inlineHelpText>Tick if the event unit is a travel day and shouldn&apos;t be included as part of the code to update the event start/end date</inlineHelpText>
        <label>Travel Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_Description__c</fullName>
        <description>Any text needed to describe or is relevant to the unit</description>
        <inlineHelpText>Any text needed to describe or is relevant to the unit</inlineHelpText>
        <label>Unit Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unit_End_Time__c</fullName>
        <description>Stores the End Date/Time of a BSC Event Unit or &apos;Session&apos; e.g. a Gala Dinner could be a BSC Event Unit of a BSC Event.</description>
        <inlineHelpText>Stores the End Date/Time of a BSC Event Unit or &apos;Session&apos; e.g. a Gala Dinner could be a BSC Event Unit of a BSC Event.</inlineHelpText>
        <label>Unit End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unit_Start_Time__c</fullName>
        <description>Stores the Start Date/Time of a BSC Event Unit or &apos;Session&apos; e.g. a Gala Dinner could be a BSC Event Unit of a BSC Event</description>
        <inlineHelpText>Stores the Start Date/Time of a BSC Event Unit or &apos;Session&apos; e.g. a Gala Dinner could be a BSC Event Unit of a BSC Event</inlineHelpText>
        <label>Unit Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Venue_Delegate_Day_Rate__c</fullName>
        <description>Populates automatically from Account (Venue)</description>
        <inlineHelpText>Populates automatically from Account (Venue)</inlineHelpText>
        <label>Venue Delegate Day Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Venue_Fixed_Cost__c</fullName>
        <description>Populates automatically from Account (Venue)</description>
        <inlineHelpText>Populates automatically from Account (Venue)</inlineHelpText>
        <label>Venue Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the Unit venue (if different from the Event venue)</description>
        <inlineHelpText>Select the Unit venue (if different from the Event venue)</inlineHelpText>
        <label>Venue</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Event Units (Held in this Venue)</relationshipLabel>
        <relationshipName>BSC_Event_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BSC Event Unit</label>
    <nameField>
        <label>Event Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BSC Event Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>End_Date_to_be_greater_than_Start_Date</fullName>
        <active>true</active>
        <description>to make sure that the end date entered on the event unit is after the start date.</description>
        <errorConditionFormula>Unit_End_Time__c  &lt;  Unit_Start_Time__c</errorConditionFormula>
        <errorDisplayField>Unit_End_Time__c</errorDisplayField>
        <errorMessage>The End Date and Time must be after the Start Date and Time!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_update_start_end_date_if_no_trainer</fullName>
        <active>true</active>
        <description>Make sure that they delete the trainer before updating the unit dates</description>
        <errorConditionFormula>AND( 
OR( 
DATEVALUE( 
PRIORVALUE( 
Unit_Start_Time__c) 
) 
&lt;&gt; 
DATEVALUE( 
Unit_Start_Time__c 
), 
DATEVALUE( 
PRIORVALUE( 
Unit_End_Time__c) 
) 
&lt;&gt; 
DATEVALUE( 
Unit_End_Time__c 
) 
), 
!ISBLANK(BSC_Event_Trainer__c) 
)</errorConditionFormula>
        <errorMessage>This event unit is linked to a trainer with an activity, please delete the event trainer before updating the event unit.</errorMessage>
    </validationRules>
</CustomObject>